--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <img src="logo avatar.png" alt="avatar do Siben" srcset="">
+  <header class="container text-center">
+    <img src="logo avatar.png" alt="avatar do Siben" srcset=""> class="rounded-circle" width="150" height="150"
     <p>Eu sou João Siben</p>
     <H1>Sou barbeiro!
     <P>Eu faço cursos de barbeiros!</P>
 <p>Minhas habilidades</p>
 <div>
-    <p>Freestyle</p>
-    <p>Degradê</p>
-    <p>Cortes</p>
-    <p>Cortes artísticos</p>
+    <p class="badge bg-secondary">Freestyle</p>
+    <p class="badge bg-secondary">Degradê</p>
+    <p class="badge bg-secondary">Cortes</p>
+    <p class="badge bg-secondary">Cortes artísticos</p>
 </div>
 </header>
 <main class="container"
