--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="container text-center">
-    <img src="logo avatar.png" alt="avatar do Siben" srcset=""> class="rounded-circle" width="150" height="150"
+    <img src="logo avatar.png" alt="avatar do Siben" class="rounded-circle" width="150" height="150" srcset="">
     <p>Eu sou João Siben</p>
     <H1>Sou barbeiro!
     <P>Eu faço cursos de barbeiros!</P>
