--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="container text-center">
-    <img src="logo avatar.png" alt="avatar do Siben" class="rounded-circle" width="150" height="150" srcset="">
+    <img src="img/logo avatar.png" alt="avatar do Siben" class="rounded-circle" width="150" height="150" srcset="">
     <p>Eu sou João Siben</p>
     <H1>Sou barbeiro!
     <P>Eu faço cursos de barbeiros!</P>
@@ -26,7 +26,18 @@
 <main class="container"
 <main class="container">
     <h2>Meus projetos</h2>
-    <div class="row">
+    <div class="row"> 
+
+      <div class="col-md-4">
+                <div class="card">
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <div class="card-body">
+                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
+                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
+                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
+                            externas do Google Fonts.
+
       <div class="col-md-4">
         <div class="card" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="..." />
@@ -40,6 +51,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </main>
  <h2>Meus projetos</h2>
