--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="card">
                     <img src="img/corte projeto 1.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                        <h5 class="card-title">Freestyle: Um estilo único</h5>
                         <p class="card-text">O freestyle de cabelo é uma forma criativa de expressar sua personalidade atráves de diferentes estilos, cortes, e cores, permitindo estilos unicos e originais!.
                         </p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
@@ -42,14 +42,11 @@
      
     <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/corte 2.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
+                        <h5 class="card-title">Degradê: O core perfeito!
                             Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um vusual moderno e natural!.</p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                 </div>
