--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="card">
                     <img src="img/corte projeto 1.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Freestyle: Um estilo único</h5>
+                        <h5 class="card-title">FREESTYLE: Um estilo único</h5>
                         <p class="card-text">O freestyle de cabelo é uma forma criativa de expressar sua personalidade atráves de diferentes estilos, cortes, e cores, permitindo estilos unicos e originais!.
                         </p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
@@ -44,13 +44,29 @@
                 <div class="card">
                     <img src="img/corte 2.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Degradê: O core perfeito!
-                            Artificial</h5>
+                        <h5 class="card-title">DEGRADE: O corte perfeito!
+                          </h5>
                         <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um vusual moderno e natural!.</p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                 </div>
+            </div> 
+
+     <div class="col-md-4">
+                <div class="card">
+                    <img src="img/<div class="col-md-4">
+                <div class="card">
+                    <img src="img/barba.jpeg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <div class="card-body">
+                        <h5 class="card-title">BARBA:A maquiagem do homem
+                        </h5>
+                        <p class="card-text">Fazer a barba ajuda a manter um visual cuidado e estiloso, alinhando e fazendo encaixar com o corte!
+                        </p>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                </div>
             </div>
+      
 
     </div>
   </main>
