--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="card">
                     <img src="img/corte 2.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">DEGRADE: O corte perfeito!
+                        <h5 class="card-title">DEGRADÊ: O corte perfeito!
                           </h5>
                         <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um vusual moderno e natural!.</p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
@@ -56,9 +56,9 @@
                 <div class="card">
                     <img src="img/<div class="col-md-4">
                 <div class="card">
-                    <img src="img/barba.jpeg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/barba top.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">BARBA:A maquiagem do homem
+                        <h5 class="card-title">BARBA: A maquiagem do homem!
                         </h5>
                         <p class="card-text">Fazer a barba ajuda a manter um visual cuidado e estiloso, alinhando e fazendo encaixar com o corte!
                         </p>
