--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
 
     </div>
   </main>
- <h2>Meus projetos</h2>
- <div class="row">
-    </div></div>
-</div>
- </ main>
+      <footer class="container py-5">
+        <h2>Entre em contato</h2>
+        <div>
+            <a href="https://github.com/sibenlindo">GitHub</a>
+        </div>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por João Siben</p>
+    </footer>
 
  <script src=""https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
