--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="card-body">
                         <h5 class="card-title">DEGRADÊ: O corte perfeito!
                           </h5>
-                        <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um vusual moderno e natural!.</p>
+                        <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um visual moderno e natural!.</p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
         <div>
             <a href="https://github.com/sibenlindo">GitHub</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2024. Produzido por João Siben</p>
+        <p class="my-5 text-center">© Copyright 2025. Produzido por João Siben</p>
     </footer>
 
  <script src=""https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
