--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </main>
       <footer class="container py-5">
-        <h2>Entre em contato</h2>
+        <h2>Marque seu horário!</h2>
         <div>
             <a href="https://github.com/sibenlindo">GitHub</a>
         </div>
