--- a/index.html
+++ b/index.html
@@ -1,74 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">]
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"  crossorigin="anonymous"  />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-  <header class="container text-center">
-    <img src="img/logo avatar.png" alt="avatar do Siben" class="rounded-circle" width="150" height="150" srcset="">
-    <p>Eu sou João Siben</p>
-    <H1>Sou barbeiro!
-    <P>Eu faço cursos de barbeiros!</P>
-<p>Minhas habilidades</p>
-<div>
-    <p class="badge bg-secondary">Freestyle</p>
-    <p class="badge bg-secondary">Degradê</p>
-    <p class="badge bg-secondary">Cortes</p>
-    <p class="badge bg-secondary">Cortes artísticos</p>
-</div>
-</header>
-<main class="container"
-<main class="container">
-    <h2>Meus projetos</h2>
-    <div class="row"> 
+    <header class="container text-center">
+        <img src="img/logo avatar.png" alt="avatar do Siben" class="rounded-circle" width="150" height="150" srcset="">
+        <p>Eu sou João Siben</p>
+        <H1>Sou barbeiro!
+            <P>Eu faço cursos de barbeiros!</P>
+            <p>Minhas habilidades</p>
+            <div>
+                <p class="badge bg-secondary">Freestyle</p>
+                <p class="badge bg-secondary">Degradê</p>
+                <p class="badge bg-secondary">Cortes</p>
+                <p class="badge bg-secondary">Cortes artísticos</p>
+            </div>
+    </header>
+    <main class="container" <main class="container">
+        <h2>Meus projetos</h2>
+        <div class="row">
 
-      <div class="col-md-4">
+            <div class="col-md-4">
                 <div class="card">
-                    <img src="img/corte projeto 1.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/corte projeto 1.jpg" class="card-img-top"
+                        alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">FREESTYLE: Um estilo único</h5>
-                        <p class="card-text">O freestyle de cabelo é uma forma criativa de expressar sua personalidade atráves de diferentes estilos, cortes, e cores, permitindo estilos unicos e originais!.
+                        <p class="card-text">O freestyle de cabelo é uma forma criativa de expressar sua personalidade
+                            atráves de diferentes estilos, cortes, e cores, permitindo estilos unicos e originais!.
                         </p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                 </div>
             </div>
-     
-    <div class="col-md-4">
+
+            <div class="col-md-4">
                 <div class="card">
                     <img src="img/corte 2.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">DEGRADÊ: O corte perfeito!
-                          </h5>
-                        <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um visual moderno e natural!.</p>
+                        </h5>
+                        <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um
+                            visual moderno e natural!.</p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                 </div>
-            </div> 
+            </div>
 
-     <div class="col-md-4">
+            <div class="col-md-4">
                 <div class="card">
                     <img src="img/barba top.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">BARBA: A maquiagem do homem!
                         </h5>
-                        <p class="card-text">Fazer a barba ajuda a manter um visual cuidado e estiloso, alinhando e fazendo encaixar com o corte!
+                        <p class="card-text">Fazer a barba ajuda a manter um visual cuidado e estiloso, alinhando e
+                            fazendo encaixar com o corte!
                         </p>
                         <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                 </div>
             </div>
-      
 
-    </div>
-  </main>
-      <footer class="container py-5">
+
+        </div>
+    </main>
+    <footer class="container py-5">
         <h2>Marque seu horário!</h2>
         <div>
             <a href="https://github.com/sibenlindo">GitHub</a>
@@ -76,9 +81,8 @@
         <p class="my-5 text-center">© Copyright 2025. Produzido por João Siben</p>
     </footer>
 
- <script src=""https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
- integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
- crossorigin="anonymous""
+    <script src="" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous""
  ><</script>
 </body>
 </html>"
