--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                         <p class="card-text">O freestyle de cabelo é uma forma criativa de expressar sua personalidade
                             atráves de diferentes estilos, cortes, e cores, permitindo estilos unicos e originais!.
                         </p>
-                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
+                            o projeto</button>
                     </div>
                 </div>
             </div>
@@ -50,7 +51,8 @@
                         </h5>
                         <p class="card-text">O cabelo com efeito degradê é uma transição suave de cores, criando um
                             visual moderno e natural!.</p>
-                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
+                            o projeto</button>
                     </div>
                 </div>
             </div>
@@ -64,7 +66,8 @@
                         <p class="card-text">Fazer a barba ajuda a manter um visual cuidado e estiloso, alinhando e
                             fazendo encaixar com o corte!
                         </p>
-                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                        button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o projeto</button>
                     </div>
                 </div>
             </div>
