--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p class="card-text">Fazer a barba ajuda a manter um visual cuidado e estiloso, alinhando e
                             fazendo encaixar com o corte!
                         </p>
-                        button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
                     </div>
                 </div>
