--- a/index.html
+++ b/index.html
@@ -228,9 +228,6 @@
                     <p class="my-5 text-center">© Copyright 2025. Produzido por João Siben</p>
                 </footer>
 
-                <script src="" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                    crossorigin="anonymous""
- ><</script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>"
