--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
         </div>
     </main>
-    </div> <!-- Modal 1 -->
+   
+    <!-- Modal 1 -->
     <div class="modal" id="modal1" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
