--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://github.com/sibenlindo" </div>
+                    <a href="https://github.com/sibenlindo">Ver projeto ao vivo</a>
                 </div>
+        </div>
                 <!-- Modal 2 -->
                 <div class=" modal" id="modal2" tabindex="-1">
                     <div class="modal-dialog">
@@ -104,7 +105,10 @@
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é engajar os jogadores em um cenário fictício que aborda o avanço da IA e
+                                <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e
+                                    JavaScript, que simula uma experiência narrativa centrada no tema da Inteligência
+                                    Artificial. O objetivo é engajar os jogadores em um cenário fictício que aborda o
+                                    avanço da IA e
                                     suas possíveis
                                     consequências para a humanidade, destacando a importância da reflexão
                                     ética sobre a tecnologia.
@@ -151,9 +155,7 @@
                                     alt="Imagem representativa do projeto de uma biblioteca online">
                             </div>
                             <div class="modal-footer">
-                                <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver
-                                    projeto ao
-                                    vivo</a>
+                                <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao vivo</a>
                                 <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver
                                     código do
                                     projeto</a>
