--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@
                             </div>
                             <div class="modal-footer">
                                 <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao vivo</a>
-                                <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver
-                                    código do
-                                    projeto</a>
+                                <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do projeto</a>
                             </div>
                         </div>
                     </div>
