--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                                     cliques do
                                     usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como
                                     mudanças de
+                            <div class="modal-body">
                                     cenário, movimentos de atores, exibição ou ocultação de atores, e a
                                     apresentação de
                                     diálogos informativos. Por exemplo, ao clicar em determinados atores, os
@@ -216,6 +217,8 @@
                     </div>
                 </div>
 
+
+                
                 <footer class="container py-5">
                     <h2>Marque seu horário!</h2>
                     <div>
