--- a/index.html
+++ b/index.html
@@ -81,15 +81,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">FREESTYLE: Um estilo único</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma págin… experiência da pessoa usuária. A escolha da tipografia e do
-                        esquema de cores contribui para
-                        a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">
+                    <p>O freestyle em cabelo é uma técnica de corte e estilo que valoriza a liberdade criativa, permitindo que o cabeleireiro crie cortes e penteados personalizados, de acordo com a textura e as características do cabelo de cada pessoa. Sem seguir padrões rígidos, essa abordagem usa ferramentas como tesouras e navalhas para dar forma aos fios de maneira única e autêntica. O estilo ganhou popularidade por ser moderno e permitir que cada visual expresse a personalidade do indivíduo, sendo também uma forma de arte nas mãos do profissional.
+                    <img src="img/corte projeto 1.jpg" class="img-fluid w-100"
+                        alt="Imagem representativa do freestyle">
                 </div>
                 <div class="modal-footer">
                     <a href="https://github.com/sibenlindo">Ver projeto ao vivo</a>
