--- a/index.html
+++ b/index.html
@@ -100,58 +100,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">DEGRADÊ: O corte perfeito!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e
-                        JavaScript, que simula uma experiência narrativa centrada no tema da Inteligência
-                        Artificial. O objetivo é engajar os jogadores em um cenário fictício que aborda o
-                        avanço da IA e
-                        suas possíveis
-                        consequências para a humanidade, destacando a importância da reflexão
-                        ética sobre a tecnologia.
-                    </p>
-                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela
-                        inicial, caixa de
-                        perguntas, alternativas de resposta, e o resultado final baseado nas
-                        escolhas do jogador. O CSS
-                        é utilizado para estilizar a página, empregando um esquema de cores
-                        futurista e layout
-                        responsivo para melhorar a experiência do usuário. JavaScript é usado
-                        para adicionar
-                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da
-                        página conforme as
-                        escolhas do jogador, e determinando o fluxo da narrativa através de uma
-                        série de perguntas e
-                        respostas.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido
-                        por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de
-                        livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner
-                        (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design
-                        responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a
-                        diferentes tamanhos de
-                        tela.</p>
-                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios,
-                        definir as perguntas e as
-                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e
-                        alternativas, processar as escolhas
-                        dos jogadores, e exibir o resultado final. Este design modular facilita
-                        a manutenção e a
-                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML,
-                        CSS, JavaScript) reside
-                        na criação de uma experiência interativa que não apenas entretém, mas
-                        também educa os jogadores
-                        sobre a complexidade ética e social da IA, incentivando a reflexão
-                        crítica sobre o papel da
-                        tecnologia em nossas vidas.
-                    </p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">
+                    <p>O degradê no cabelo é uma técnica que cria transições suaves entre diferentes tonalidades ou comprimentos. Pode ser de cor, com mudanças graduais de tonalidade, como no ombre ou bronde, ou de comprimento, com camadas que variam do mais longo para o mais curto. Essa técnica oferece um visual moderno, natural e com movimento, sendo versátil e adequada para qualquer tipo de cabelo, além de dar a sensação de mais volume e leveza. É uma escolha popular para quem busca um estilo contemporâneo e de baixa manutenção.
+                    <img src="img/corte 2.jpg" class="img-fluid w-100"
+                        alt="Imagem representativa do degradê">
                 </div>
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
