--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
                         alt="Imagem representativa do degradê">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
-                        vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
-                        projeto</a>
+                     <a href="https://github.com/sibenlindo">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
@@ -123,50 +120,15 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">BARBA: A maquiagem do homem!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos
-                        básicos de
-                        astronomia. Utiliza uma série de scripts associados a diferentes atores
-                        (sprites) e
-                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é
-                        familiarizar
-                        os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de
-                        diferentes
-                        constelações dependendo da localização geográfica na Terra, e a forma da
-                        Terra, através
-                        de interações e visualizações dinâmicas.</p>
-                    <p>Cada ator no projeto possui scripts que definem seu comportamento em resposta
-                        a eventos
-                        específicos, como o início do programa (quando a bandeira é clicada),
-                        cliques do
-                        usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como
-                        mudanças de
-                    <div class="modal-body">
-                        cenário, movimentos de atores, exibição ou ocultação de atores, e a
-                        apresentação de
-                        diálogos informativos. Por exemplo, ao clicar em determinados atores, os
-                        usuários podem
-                        "receber" uma prova, o que leva a uma mudança de cenário e a exibição de
-                        informações
-                        relevantes ou a visualização de uma constelação específica.</p>
-                        <p>A importância das ferramentas utilizadas, como os blocos de código visual do
-                            Scratch,
-                            reside na sua acessibilidade e na capacidade de engajar aprendizes de
-                            diferentes idades
-                            no pensamento computacional e na exploração de conceitos científicos de
-                            forma
-                            interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a
-                            criar uma
-                            experiência de aprendizado mais rica e memorável, encorajando os usuários a
-                            explorar e
-                            interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
-                        <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                    <p>A barba na barbearia é tratada como uma verdadeira arte, com o barbeiro modelando e aparando a barba de acordo com o estilo e formato do rosto do cliente. Além do corte preciso, o cuidado com a higiene e hidratação é fundamental, utilizando óleos e produtos específicos para manter os fios saudáveis. A barbearia se tornou um espaço de relaxamento e socialização, oferecendo uma experiência completa, que vai além do simples corte, sendo um reflexo do cuidado crescente com o estilo masculino.
+                        <img src="img/barba top.jpg" alt="Projeto 3" class="img-fluid w-100">
                     </div>
                     <div class="modal-footer">
-                        <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                        <a href="https://github.com/sibenlindo">Ver projeto ao vivo</a>
                     </div>
                 </div>
             </div>
